--- a/src/AppleStore/Views/Admin/AddElement.cshtml
+++ b/src/AppleStore/Views/Admin/AddElement.cshtml
@@ -8,8 +8,26 @@
 <div class="alert alert-info url-alert" role="alert">
     <a href="#"class="close-classic" ng-click="closepopup()"></a>
     <span>Товар успешно создан</span><br />
-    <span><a href="#" class="total-url">Просмотреть товар</a></span>
+    <span><a href="#" class="total-url" target="_blank">Просмотреть товар</a></span>
 </div>
+
+<div class="container admin-top-links">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/Main" class="btn btn-block btn-primary btn-lg">СПИСОК ЗАКАЗОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/GoodsMain" class="btn btn-block btn-primary  btn-lg">КАТАЛОГ ТОВАРОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/UsersMain" class="btn btn-block btn-primary  btn-lg">СПИСОК ПОЛЬЗОВАТЕЛЕЙ</a>
+        </div><!--end div ordering-list-button-column-->
+
+    </div><!--end div row-->
+</div><!--end div admin-top-links-->
+
     <div class="text-center div-main" > 
         <div class="col-xs-12 buttons-div" > 
             <div class="col-xs-4" > 
