--- a/src/AppleStore/Views/Admin/OrderPage.cshtml
+++ b/src/AppleStore/Views/Admin/OrderPage.cshtml
@@ -10,6 +10,23 @@
 @section Styles{
     
 }
+<div class="container admin-top-links">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/Main" class="btn btn-block btn-primary btn-lg">СПИСОК ЗАКАЗОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/GoodsMain" class="btn btn-block btn-primary  btn-lg">КАТАЛОГ ТОВАРОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/UsersMain" class="btn btn-block btn-primary  btn-lg">СПИСОК ПОЛЬЗОВАТЕЛЕЙ</a>
+        </div><!--end div ordering-list-button-column-->
+
+    </div><!--end div row-->
+</div><!--end div admin-top-links-->
+
 <div style="padding-top: 30px; padding-bottom: 50px; margin-bottom: 50px;">
     <h2 class="text-center" style="margin-left: 50px; margin-top: 30px;">Страница заказа</h2><br />
     <div>
