--- a/src/AppleStore/Views/Partials/Register.en-US.cshtml
+++ b/src/AppleStore/Views/Partials/Register.en-US.cshtml
@@ -3,7 +3,8 @@
     <div class="form-title col-xs-12">
         <span>Registration</span>
     </div>
-    <form asp-controller="Auth" asp-action="Register" autocomplete="off" class="reg-form" method="post" role="form">
+    <form asp-controller="Auth" asp-action="Register" autocomplete="off" class="reg-form" method="post" role="form"
+          style="padding-bottom: 25px; position:relative;">
         @*@Html.ValidationSummary(true)*@
         <div asp-validation-summary="ValidationSummary.All" class="text-danger">
             <div class="col-xs-6">
@@ -11,7 +12,7 @@
                 @*<span asp-validation-for="UserName" class="text-danger"></span>*@
             </div>
             <div class="col-xs-6">
-                <input type="text" asp-for="Password" placeholder="Password" class="popup-input" />
+                <input type="password" asp-for="Password" placeholder="Password" class="popup-input" />
                 @*<span asp-validation-for="Password" class="text-danger"></span>*@
             </div>
             <div class="col-xs-6">
@@ -19,7 +20,7 @@
                 @*<span asp-validation-for="Phone" class="text-danger"></span>*@
             </div>
             <div class="col-xs-6">
-                <input type="text" asp-for="ConfirmPassword" placeholder="Confirm Password" class="popup-input" />
+                <input type="password" asp-for="ConfirmPassword" placeholder="Confirm Password" class="popup-input" />
                 @*<span asp-validation-for="ConfirmPassword" class="text-danger"></span>*@
             </div>
             <div class="col-xs-6">
