--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -106,22 +106,22 @@
                         col-md-offset-6 col-md-6 col-lg-offset-8 col-lg-4 info-panel hidden">
                     <div class="row">
                         <div class="col-xs-3">
-                            <a href="/Home/Payment">
+                            <a href="/Home/Payment" class="info-panel-links">
                                 <span class="info-text-link">How to pay</span>
                             </a><!--end a how to pay-->
                         </div><!--end div col-xs-->
                         <div class="col-xs-2">
-                            <a href="/Home/Delivery">
+                            <a href="/Home/Delivery" class="info-panel-links">
                                 <span class="info-text-link">Delivery</span>
                             </a><!--end a dilivery-->
                         </div>
                         <div class="col-xs-2">
-                            <a href="/Home/Contact">
+                            <a href="/Home/Contact" class="info-panel-links">
                                 <span class="info-text-link">Contact</span>
                             </a><!--end a contact-->
                         </div>
                         <div class="col-xs-2">
-                            <a href="/Home/About">
+                            <a href="/Home/About" class="info-panel-links">
                                 <span class="info-text-link">About</span>
                             </a><!--end a about-->
                         </div>
@@ -199,21 +199,21 @@
                             <div class="row">
                                 <div class="col-xs-offset-1 col-xs-11">
                                     <br /><br />
-                                    <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
+                                    <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
                                         <a href="/Home/Index" class="logo-bottom" title="Home">
                                             <img src="~/images/HomeLayout/logo_footer.png" />
                                         </a><!--end a class=logo-->
                                     </div>
-                                    <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 phones">
-                                        <b>
-                                            <abbr title="Phone" ng-if="language == 'EN'">
-                                                Ph:
-                                            </abbr>
-                                            <abbr title="Телефон" ng-if="language == 'RU'">
-                                                Т.
-                                            </abbr>
-                                            &nbsp;(+380) 93-497-0480
-                                        </b>
+                                    <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12 phones">
+                                        
+                                            <span title="Phone" ng-if="language == 'EN'">
+                                                Call us:
+                                            </span>
+                                            <span title="Телефон" ng-if="language == 'RU'">
+                                                Позвоните нам.
+                                            </span>
+                                            &nbsp;+380 93 497 0480; &nbsp; +380 67 322 8587;
+                                        
                                     </div>
 
                                 </div><!--end div bottom-footer-top-->
@@ -224,25 +224,25 @@
                             <div class="row">
                                 <div class="col-xs-offset-1 col-xs-11">
                                     <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
-                                        <a href="/Mac/Index" class="bottom-footer-links"><b>Mac</b></a>
+                                        <a href="/Mac/Index" class="bottom-footer-links">Mac</a>
                                     </div>
                                     <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
-                                        <a href="/iPhone/Index" class="bottom-footer-links"><b>iPhone</b></a>
+                                        <a href="/iPhone/Index" class="bottom-footer-links">iPhone</a>
                                     </div>
                                     <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
-                                        <a href="/Watch/Index" class="bottom-footer-links"><b>Watch</b></a>
+                                        <a href="/Watch/Index" class="bottom-footer-links">Watch</a>
                                     </div>
                                     <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
-                                        <a href="/iPad/Index" class="bottom-footer-links"><b>iPad</b></a>
+                                        <a href="/iPad/Index" class="bottom-footer-links">iPad</a>
                                     </div>
                                     <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
-                                        <a href="/iPod/Index" class="bottom-footer-links"><b>iPod</b></a>
+                                        <a href="/iPod/Index" class="bottom-footer-links">iPod</a>
                                     </div>
                                     <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
-                                        <a href="/TV/Index" class="bottom-footer-links"><b>TV</b></a>
+                                        <a href="/TV/Index" class="bottom-footer-links">TV</a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
-                                        <a href="/Accessories/Index" class="bottom-footer-links"><b>Accessories</b></a>
+                                        <a href="/Accessories/Index" class="bottom-footer-links">Accessories</a>
                                     </div>
                                 </div>
                             </div>
@@ -257,13 +257,13 @@
             <div class="col-xs-offset-1 col-xs-5">
                 Copiright &nbsp; &copy; &nbsp; 2016, All rights reserved
             </div>
-            <div class="col-xs-offset-1 col-xs-4">
+            <div class="col-lg-offset-4 col-lg-2 col-md-offset-4 col-md-2 col-sm-offset-3 col-sm-3 col-xs-offset-3 col-xs-3">
                 <a href="#" class="social-networks-bottom">
-                    <img src="~/images/HomeLayout/Facebook_login.png" />
+                    <img src="~/images/HomeLayout/facebook_light.png" />
                 </a>
                 
-                <a href="#" class="social-networks-bottom">
-                    <img src="~/images/HomeLayout/Google-login.png" />
+                <a href="#" class="social-networks-bottom" >
+                    <img src="~/images/HomeLayout/google-plus_light.png" />
                 </a>
             </div>
         </div>
