--- a/src/AppleStore/Views/Admin/ChangeElement.cshtml
+++ b/src/AppleStore/Views/Admin/ChangeElement.cshtml
@@ -43,6 +43,23 @@
     <span><a href="#" class="total-url">Просмотреть товар</a></span>
 </div>
 
+<div class="container admin-top-links">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/Main" class="btn btn-block btn-primary btn-lg">СПИСОК ЗАКАЗОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/GoodsMain" class="btn btn-block btn-primary  btn-lg">КАТАЛОГ ТОВАРОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/UsersMain" class="btn btn-block btn-primary  btn-lg">СПИСОК ПОЛЬЗОВАТЕЛЕЙ</a>
+        </div><!--end div ordering-list-button-column-->
+
+    </div><!--end div row-->
+</div><!--end div admin-top-links-->
+
 <div class="col-xs-offset-1 col-xs-10 change-main">
     <div class="container">
         <div class="row">
