--- a/src/AppleStore/Views/Admin/ChangeOrder.cshtml
+++ b/src/AppleStore/Views/Admin/ChangeOrder.cshtml
@@ -3,6 +3,24 @@
     Layout = "_AdminLayout";
     ViewData["Title"] = "Изменить заказ";
 }
+<div class="container admin-top-links">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/Main" class="btn btn-block btn-primary btn-lg">СПИСОК ЗАКАЗОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/GoodsMain" class="btn btn-block btn-primary  btn-lg">КАТАЛОГ ТОВАРОВ</a>
+        </div><!--end div ordering-list-button-column-->
+
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
+            <a href="/Admin/UsersMain" class="btn btn-block btn-primary  btn-lg">СПИСОК ПОЛЬЗОВАТЕЛЕЙ</a>
+        </div><!--end div ordering-list-button-column-->
+
+    </div><!--end div row-->
+</div><!--end div admin-top-links-->
+
+
 <div style="margin-bottom: 50px; padding-bottom: 50px;" class="text-center">
     <div class="col-xs-12">
         <div>
