--- a/src/AppleStore/Views/Auth/Login-En.cshtml
+++ b/src/AppleStore/Views/Auth/Login-En.cshtml
@@ -16,7 +16,7 @@
                 <input type="text" asp-for="Email" placeholder="Email" class="popup-input" />
             </div>
             <div class="col-xs-12">
-                <input type="text" asp-for="Password" placeholder="Password" class="popup-input" />
+                <input type="password" asp-for="Password" placeholder="Password" class="popup-input" />
             </div>
             <div class="col-xs-12 login-middle" style="width: 350px; margin-left: 500px;">
                 <div class="col-xs-6 login-links">
