--- a/src/AppleStore/Views/Home/Search.cshtml
+++ b/src/AppleStore/Views/Home/Search.cshtml
@@ -9,8 +9,8 @@
 <div class="search-main">
     <div class="top-bar">
         <div class="top-bar-text">
-            <span class="top-bar-text-main">iPhone</span><br />
-            <span class="top-bar-text-more">All world inside</span>
+            <span class="top-bar-text-main">Search</span><br />
+            <span class="top-bar-text-more">Result</span>
         </div>
         <div class="top-img-bar">
             <img src="~/images/Data/iPhone/iphone.jpg" class="nav-img" />
@@ -19,10 +19,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="col-sm-1 top-link-panel">
+                        <div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 top-link-panel">
                             <a href="/Home/Index" title="Home" class="top-link-panel-text">Home</a>
                         </div><!--end div col-1-->
-                        <div class="col-sm-1 top-link-panel">
+                        <div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 top-link-panel">
                             <span class="top-link-panel-text">Search</span>
                         </div><!--end div col-1-->
                     </div><!--end div col-12-->
@@ -37,17 +37,21 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 ipad-items" ng-repeat="element in elements">
             <div class="item-hover" ng-click="route(element.AppleID)">
                 <div class="element-a-link">
-                    <div class="container">
-                        <div class="row element-hover-text">
+                    <div class="container text-center">
+                        <div class="row element-hover-text text-center">
 
-                            <div class="element-hover-text-div">
+                            <div class="element-hover-text-div text-center">
                                 
                                 <span ng-if="element.Categories.CategoryName == 'iPad' || 
-                                      element.Categories.CategoryName == 'Mac' || 
                                       element.Categories.CategoryName == 'iPhone'">
                                     <span ng-if="language == 'EN'">Processor: &nbsp;</span>
                                     <span ng-if="language == 'RU'">Процессор: &nbsp;</span>
                                     <span>{{element.ProductDetails | GetProcessor }} Core</span>
+                                </span>
+                                <span ng-if="element.Categories.CategoryName == 'Mac'">
+                                    <span ng-if="language == 'EN'">Processor: &nbsp;</span>
+                                    <span ng-if="language == 'RU'">Процессор: &nbsp;</span>
+                                    <span>{{element.ProductDetails | ProcessorCore }} Core</span>
                                 </span>
                                 <span ng-if="element.Categories.CategoryName == 'iPod'">
                                     <span ng-if="language == 'EN'">HD: &nbsp;</span>
@@ -71,7 +75,7 @@
                                 </span>
                             </div><!--end div processor-->
 
-                            <div class="element-hover-text-div">
+                            <div class="element-hover-text-div text-center">
 
                                 <span ng-if="element.Categories.CategoryName == 'iPad' ||
                                       element.Categories.CategoryName == 'Mac' ||
@@ -149,10 +153,10 @@
         <div class="col-xs-6 paging">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-offset-4 col-xs-4
-                                    col-sm-offset-4 col-sm-4
-                                    col-sm-offset-3 col-sm-4
-                                    col-lg-offset-4 col-sm-4">
+                    <div class="col-xs-offset-4 col-xs-6
+                                    col-sm-offset-4 col-sm-5
+                                    col-md-offset-4 col-md-4
+                                    col-lg-offset-4 col-lg-4">
                         <div class="page-items col-xs-2" ng-repeat="page in pages">
                             <div ng-if="page == active" class="page-item-active">
                                 {{page}}
@@ -182,7 +186,9 @@
     <script type="text/javascript" asp-src-include="~/js/HomeLayout/Search/app/*.js"></script>
     <script>
         function Load(){}
-        
+        $(window).resize(function () {
+            FilterPosition();
+        });
     </script>
 }
 
