--- a/src/AppleStore/Views/Partials/Login.ru-RU.cshtml
+++ b/src/AppleStore/Views/Partials/Login.ru-RU.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="login-page">
-    <div class="form-title col-xs-12">
+    <div class="form-title col-xs-12 text-center">
         <span>Вход</span>
     </div>
     <form asp-controller="Auth" asp-action="Login" class="log-form" autocomplete="off" method="post" role="form">
@@ -15,7 +15,7 @@
                 <input type="text" asp-for="Email" placeholder="Email" class="popup-input" />
             </div>
             <div class="col-xs-12">
-                <input type="text" asp-for="Password" placeholder="Пароль" class="popup-input" />
+                <input type="password" asp-for="Password" placeholder="Пароль" class="popup-input" />
             </div>
                 <div class="col-xs-12 login-middle">
                     <div class="col-xs-6 login-links">
