--- a/src/AppleStore/wwwroot/css/Home/site.css
+++ b/src/AppleStore/wwwroot/css/Home/site.css
@@ -164,6 +164,8 @@
     bottom: 20%;
     left: 15%;
     transition: bottom 0.8s linear 0s;
+    width: 70px;
+    height: 50px;
 }
 .iphone-data-text{
     position: relative;
@@ -219,6 +221,7 @@
 .mac:hover .mac-data-text{
     bottom: 25%;
 }
+
 .carousel-indicators{
     z-index: 2;
 }
@@ -229,7 +232,6 @@
     .value-text{
         font-size: 2em;
     }
-
 }
 @media (min-width: 1024px) and (max-wodth: 1200px){
     .title-text{
@@ -241,6 +243,7 @@
     #ipod-img{
         margin-left: 60%;
     }
+
 }
 @media (min-width: 768px) and (max-width: 1024px) {
     .title-text{
@@ -248,6 +251,14 @@
     }
     .value-text{
         font-size: 1.3em;
+    }
+    .mac:hover .mac-data-text{
+        bottom: 20%;
+        font-size: 1.5em;
+    }
+    .mac-data-text{
+        bottom: 15%;
+        z-index: 2;
     }
 }
 @media (max-width: 767px) and (min-width: 481px) {
@@ -257,12 +268,15 @@
     .value-text{
         font-size: 0.8em;
     }
-
+    .mac:hover .mac-data-text{
+        bottom: 20%;
+    }
 .data-text{
     bottom: 45%;
 }
-.mac-data-text{
-    bottom: 18%;
+
+#mac-img{
+    width: 80%;
 }
 .iphone-data-text{
     bottom: 105%;
