--- a/src/AppleStore/wwwroot/css/HomeLayout/popups.css
+++ b/src/AppleStore/wwwroot/css/HomeLayout/popups.css
@@ -107,12 +107,17 @@
     border: none;
     font-size: 15px;
     color: #989898;
-    font-family: OpenSans-Light;
+    font-family: OpenSans-Light;    
+}
+.reg-form{
+    position:relative;
+    margin-bottom: 20px;
+    bottom: 20px;
 }
 .form-title{
     top: 0px;
     height: 60px;
-    padding-top: 10px;
+    padding-top: 15px;
 }
 .form-title span{
     font-family: OpenSans-Light;
@@ -259,12 +264,14 @@ textarea:focus, input:focus{
     padding-top: 2px;
 }
 .pre-loader-popup{
+    position:relative;
     min-height: 400px;
     min-width: 400px;
-    position: static;
+    height:100%;
     margin-top: -50px;
     background-color: lightgray;
     padding-top: 50px;
+    z-index:3;
 }
 
 .ordering-login-button{
