--- a/src/AppleStore/Views/Partials/Cart.en-US.cshtml
+++ b/src/AppleStore/Views/Partials/Cart.en-US.cshtml
@@ -2,11 +2,11 @@
 @{ 
     Layout = null;
 }
-@*<link href="~/css/HomeLayout/cartPreloader.css" rel="stylesheet" />
+<link href="~/css/HomeLayout/cartPreloader.css" rel="stylesheet" />
 <div class="pre-loader-cart">
     <div class="round-cart">
     </div><!--end div round-->
-</div><!--end div pre-loader-->*@
+</div><!--end div pre-loader-->
 <div class="route-cart">
     <div class="col-xs-12 cart-main">
         <div class="col-xs-12 cart-title-div">
