--- a/src/AppleStore/Views/Partials/LogOut.ru-RU.cshtml
+++ b/src/AppleStore/Views/Partials/LogOut.ru-RU.cshtml
@@ -2,7 +2,7 @@
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
 
 <div class="loggedin-page">
-    <div class="col-xs-12 loggedin-title">
+    <div class="col-xs-12 loggedin-title text-center" style="margin-top: 15px;">
         <span>Инфо</span>
     </div>
     <div class="loggedin-info-text">
