--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -132,37 +132,38 @@
             <div class="link-panel">
                 <div class="container hidden link-texts">
                     <div class="row">
-                        <div class="col-xs-offset-2 col-xs-1">
-                            <a href="/Mac/Index">
+                        <div class="col-lg-offset-2 col-md-offset-1 col-sm-offset-1 col-xs-offset-0
+                              col-xs-1">
+                            <a href="/Mac/Index" class="link-text-item-a">
                                 <span class="link-text-item">
                                     Mac
                                 </span><!--end span link-text-item-->
                             </a><!--end a mac link-->
                         </div><!--end div mac col-->
                         <div class="col-xs-1">
-                            <a href="/iPad/Index">
+                            <a href="/iPad/Index" class="link-text-item-a">
                                 <span class="link-text-item">
                                     iPad
                                 </span><!--end span link-text-item-->
                             </a><!--end a ipad link-->
                         </div><!--end div ipad col-->
                         <div class="col-xs-1">
-                            <a href="/iPhone/Index">
+                            <a href="/iPhone/Index" class="link-text-item-a">
                                 <span class="link-text-item">
                                     iPhone
                                 </span><!--end span link-text-item-->
                             </a><!--end a iphone link-->
                         </div><!--end div iphone col-->
-                        <div class="col-xs-1">
-                            <a href="/Watch/Index">
+                        <div class="col-xs-1 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                            <a href="/Watch/Index" class="link-text-item-a">
                                 <span class="link-text-item">
                                     Watch
                                 </span><!--end span link-text-item-->
                             </a><!--end a watch link-->
                         </div><!--end div watch col-->
                         <div class="col-xs-1">
-                            <div class="col-xs-offset-3">
-                                <a href="/TV/Index">
+                            <div class="col-xs-offset-0 col-sm-offset-1 col-md-2 col-lg-offset-3">
+                                <a href="/TV/Index" class="link-text-item-a">
                                     <span class="link-text-item">
                                         TV
                                     </span><!--end span link-text-item-->
@@ -170,14 +171,14 @@
                             </div><!--end div offset column-->
                         </div><!--end div tv col-->
                         <div class="col-xs-1">
-                            <a href="/iPod/Index">
+                            <a href="/iPod/Index" class="link-text-item-a">
                                 <span class="link-text-item">
                                     iPod
                                 </span><!--end span link-text-item-->
                             </a><!--end a ipod link-->
                         </div><!--end div ipod col-->
                         <div class="col-xs-1">
-                            <a href="/Accessories/Index">
+                            <a href="/Accessories/Index" class="link-text-item-a">
                                 <span class="link-text-item">
                                     Accessories
                                 </span><!--end span link-text-item-->
