--- a/src/AppleStore/Views/TV/TVItem.ru-RU.cshtml
+++ b/src/AppleStore/Views/TV/TVItem.ru-RU.cshtml
@@ -45,7 +45,7 @@
             </div><!--end div main-image-div-->
             <div class="col-xs-12 ident"></div>
 
-            <div class="col-xs-4" ng-repeat="image in item.AppleImage">
+            <div class="col-xs-4 col-sm-4 col-md-6 col-lg-4 img-list" ng-repeat="image in item.AppleImage">
                 <div ng-if="$index == imageIndex">
                     <div class="item-image-div image-border">
                         <img ng-src="{{image.Path}}" class="images-list" />
@@ -152,7 +152,7 @@
                     </div><!--end div main-image-div-->
                     <div class="col-xs-12 ident"></div>
 
-                    <div class="col-xs-4" ng-repeat="image in item.AppleImage">
+                    <div class="col-xs-4 col-sm-4 col-md-6 col-lg-4 img-list" ng-repeat="image in item.AppleImage">
                         <div ng-if="$index == imageIndex">
                             <div class="item-image-div image-border">
                                 <img ng-src="{{image.Path}}" class="images-list" />
