--- a/src/AppleStore/Views/iPad/Index.cshtml
+++ b/src/AppleStore/Views/iPad/Index.cshtml
@@ -150,13 +150,13 @@
                         <div class="container">
                             <div class="row element-hover-text">
                                 @*col-xs-12*@
-                                <div class="element-hover-text-div">
+                                <div class="element-hover-text-div text-center">
                                     <span ng-if="language == 'EN'">Processor: &nbsp;</span>
                                     <span ng-if="language == 'RU'">Процессор: &nbsp;</span>
                                     <span>{{element.ProductDetails | GetProcessor }}</span>
                                 </div><!--end div processor-->
-
-                                <div class="element-hover-text-div">
+                            <br />
+                                <div class="element-hover-text-div text-center">
                                     <span ng-if="language == 'EN'">RAM: &nbsp;</span>
                                     <span ng-if="language == 'RU'">Оперативная память: &nbsp;</span>
                                     <span>{{element.ProductDetails | GetRam }}</span>
@@ -214,10 +214,10 @@
             <div class="col-xs-6 paging">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-offset-4 col-xs-4
-                                    col-sm-offset-4 col-sm-4
-                                    col-sm-offset-3 col-sm-4
-                                    col-lg-offset-4 col-sm-4" >
+                        <div class="col-xs-offset-4 col-xs-8
+                                    col-sm-offset-4 col-sm-8
+                                    col-md-offset-4 col-md-6
+                                    col-lg-offset-4 col-lg-4" >
                             <div class="page-items col-xs-2" ng-repeat="page in pages">
                                 <div ng-if="page == active" class="page-item-active">
                                     {{page}}
