--- a/src/AppleStore/Views/iPod/Index.cshtml
+++ b/src/AppleStore/Views/iPod/Index.cshtml
@@ -19,10 +19,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="col-sm-1 top-link-panel">
+                        <div class="col-xs-2 col-sm-2 col-md-1 col-lg-1 top-link-panel">
                             <a href="/Home/Index" title="Home" class="top-link-panel-text">Home</a>
                         </div><!--end div col-1-->
-                        <div class="col-sm-1 top-link-panel">
+                        <div class="col-xs-2 col-sm-2 col-md-1 col-lg-1 top-link-panel">
                             <span class="top-link-panel-text">iPod</span>
                         </div><!--end div col-1-->
                     </div><!--end div col-12-->
@@ -166,10 +166,10 @@
             <div class="col-xs-6 paging">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-offset-4 col-xs-4
-                                    col-sm-offset-4 col-sm-4
-                                    col-sm-offset-3 col-sm-4
-                                    col-lg-offset-4 col-sm-4">
+                        <div class="col-xs-offset-4 col-xs-8
+                                    col-sm-offset-4 col-sm-8
+                                    col-md-offset-4 col-md-6
+                                    col-lg-offset-4 col-lg-4">
                             <div class="page-items col-xs-2" ng-repeat="page in pages">
                                 <div ng-if="page == active" class="page-item-active">
                                     {{page}}
