--- a/src/AppleStore/wwwroot/css/HomeLayout/site.css
+++ b/src/AppleStore/wwwroot/css/HomeLayout/site.css
@@ -143,7 +143,9 @@ html{
 .link-text-item:hover{
     color: #4d4c51;
 }
-
+.link-text-item-a:hover{
+    color: #4d4c51;
+}
 /*=========== navbar bottom=========================*/
 .bottom-navbar{
     position:relative;
@@ -201,3 +203,23 @@ html{
 .ng-leave           { animation: rotateFall 0.5s both ease-in; }
     
 /*====================*/
+@media (min-width: 1024px) and (max-width: 1200px){
+    
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+    .link-text-item{
+        font-size: 18px;
+    }
+}
+@media (max-width: 767px) and (min-width: 481px) {
+    .link-text-item{
+        font-size: 17px;
+    }
+}
+@media (max-width: 480px) {
+    .link-text-item{
+        font-size: 16px;
+    }
+}
+
+
