--- a/src/AppleStore/Views/Admin/OrderPage.cshtml
+++ b/src/AppleStore/Views/Admin/OrderPage.cshtml
@@ -159,7 +159,7 @@
                 @if (Model.Status != "Executed    ")
                 {
                     <input type="button" class="btn btn-info execute-btn" ng-click="executeorder()" 
-                           value="Поставить в 'Отработан'" />
+                           value="Поставить в 'Выполнен'" />
                 }
                 else
                 {
