--- a/src/AppleStore/Views/Shared/_AdminLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_AdminLayout.cshtml
@@ -24,7 +24,7 @@
             <div class="col-xs-offset-5 col-xs-6 col-sm-offset-5 col-sm-6 col-md-offset-6 col-md-5 col-lg-offset-7 col-lg-4">
                 <div class="col-xs-8">Ваш статус &nbsp;&nbsp; @ViewData["Role"]</div>
                 <div class="col-xs-4">
-                    <a href="#" id="logout" ng-click="logout()">Выйти</a>
+                    <a href="/Auth/LogOutAdmin" id="logout">Выйти</a>
                 </div>
             </div><!--end div head user info-->
             
